<resources>
    <string name="app_name">Alpha Fitness</string>
    <string name="google_map_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyACQqvFqiBrR7CzY-j_JBNIQRAQjKlvo1E</string>
    <!--Record Workout Activity Strings -->
    <string name="record_workout">Record Workout</string>
    <string name="distance">DISTANCE</string>
    <string name="duration">DURATION</string>
    <string name="km">Meters</string>
    <string name="minutes">MINS</string>
    <string name="hours">MINS</string>
    <string name="start_activity">START</string>
    <string name="stop_activity">STOP</string>
    <string name="user_profile_image">User profile image</string>
    <string name="start_distance">00</string>
    <string name="start_duration">00.00.00</string>
    <string name="title_activity_maps">Map</string>

     <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>


<string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>
    <!--Workout Details Activity Strings -->

    <!--User Profile Activity Strings -->

</resources>
